--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ indexmap = { version = "2.2.6", features = ["serde"] }
 thiserror = "1.0.61"
 
 clap = { version = "4.5.7", features = ["derive"] }
+indicatif = "0.17.8"
 mlua = { version = "0.9.8", features = ["luajit"] }
-dependency-graph = "0.1.5"
 serde = { version = "1.0.203", features = ["derive"] }
 bincode = "1.3.3"
 
