--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "modcrab"
 version = "0.1.0"
 edition = "2021"
+license = "GPL-3.0-or-later"
+license-file = "LICENSE"
 
 [dependencies]
 log = "0.4.21"
