--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,6 @@ name = "modcrab"
 version = "0.1.0"
 edition = "2021"
 license = "GPL-3.0-or-later"
-license-file = "LICENSE"
 
 [dependencies]
 log = "0.4.21"
@@ -17,6 +16,7 @@ anyhow = "1.0.86"
 clap = { version = "4.5.7", features = ["derive"] }
 indicatif = "0.17.8"
 
+walkdir = "2.5.0"
 mlua = { version = "0.9.8", features = ["luajit"] }
 serde = { version = "1.0.203", features = ["derive"] }
 bincode = "1.3.3"
