--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,19 @@ license = "GPL-3.0-or-later"
 [dependencies]
 log = "0.4.21"
 simple_logger = "5.0.0"
+
 tap = "1.0.1"
 itertools = "0.13.0"
 indexmap = { version = "2.2.6", features = ["serde"] }
 thiserror = "1.0.61"
 anyhow = "1.0.86"
 
+dirs = "5.0.1"
+walkdir = "2.5.0"
+
 clap = { version = "4.5.7", features = ["derive"] }
 indicatif = "0.17.8"
 
-walkdir = "2.5.0"
 mlua = { version = "0.9.8", features = ["luajit"] }
 serde = { version = "1.0.203", features = ["derive"] }
 bincode = "1.3.3"
