--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ indicatif = "0.17.8"
 mlua = { version = "0.9.8", features = ["luajit"] }
 serde = { version = "1.0.203", features = ["derive"] }
 bincode = "1.3.3"
+
+modcrabfs = { path = "modcrabfs" }
